# rusty_xkcd

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
benches/: comics_bench.rs
src/: comics.rs  errors.rs  explanation.rs  lib.rs  xkcd_explained.rs
tests/: comic_tests.rs  comics.rs  comics_test.rs  explanation_test.rs
