[package]
name = "rusty_xkcd"
version = "0.1.0"
authors = ["Kixiron <kixiron.contact@gmail.com>"]
edition = "2018"
descripton = "An API wrapper for xkcd.com"
readme = "./README.md"
keywords = ["xkcd", "comic", "api", "wrapper", "rest"]
license-file = "./LICENSE"

[badges]
appveyor = { repository = "rusty_xkcd", branch = "master", service = "github" }
travis-ci = { repository = "rusty_xkcd", branch = "master" }

[dependencies]
quick-error = "1.2.2"
serde_json = "1.0.39"
reqwest = "0.9.11"
chrono = "0.4.6"
rand = "0.6.5"
