[package]
name = "rusty_xkcd"
version = "0.1.0"
authors = ["Kixiron <kixiron.contact@gmail.com>"]
edition = "2018"
description = "An API wrapper for xkcd.com"
documentation = "https://docs.rs/rusty_xkcd/0.1.0/rusty_xkcd/"
repository = "https://github.com/Kixiron/rusty_xkcd"
readme = "README.md"
keywords = [
    "xkcd",
    "comic",
    "api",
    "wrapper",
    "rest"
]
license = "Apache 2.0"
exclude = [
    "benches/*",
    "tests/*",
    ".travis.yml",
    ".gitignore",
    "target/*"
]

[badges]
appveyor = { repository = "rusty_xkcd", branch = "master", service = "github" }
travis-ci = { repository = "rusty_xkcd", branch = "master" }

[dependencies]
quick-error = "1.2.2"
serde_json = "1.0.39"
reqwest = "0.9.11"
chrono = "0.4.6"
rand = "0.6.5"
